--- a/AWS/create_ecs_cluster.ipynb
+++ b/AWS/create_ecs_cluster.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import Libraries\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,50 +20,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = client.create_cluster(\n",
-    "    clusterName = clusterName\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cluster': {'clusterArn': 'arn:aws:ecs:ap-south-1:682310447536:cluster/Sani-Abhay', 'clusterName': 'Sani-Abhay', 'status': 'ACTIVE', 'registeredContainerInstancesCount': 0, 'runningTasksCount': 0, 'pendingTasksCount': 0, 'activeServicesCount': 0, 'statistics': [], 'tags': [], 'settings': [{'name': 'containerInsights', 'value': 'disabled'}], 'capacityProviders': [], 'defaultCapacityProviderStrategy': []}, 'ResponseMetadata': {'RequestId': '736ae7b5-10f6-4080-98a2-1890edac7c8e', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '736ae7b5-10f6-4080-98a2-1890edac7c8e', 'content-type': 'application/x-amz-json-1.1', 'content-length': '381', 'date': 'Thu, 30 Mar 2023 12:04:28 GMT'}, 'RetryAttempts': 0}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = client.delete_cluster(\n",
-    "    cluster = clusterName\n",
-    ")"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run New Task"
+    "Create New Cluster\n"
    ]
   },
   {
@@ -64,92 +33,133 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my_task = client.run_task(\n",
-    "#     cluster=clusterName,\n",
-    "#     count=1,\n",
-    "#     enableECSManagedTags=True|False,\n",
-    "#     enableExecuteCommand=True|False,\n",
-    "#     group='string',\n",
-    "#     launchType='FARGATE',\n",
-    "#     networkConfiguration={\n",
-    "#         'awsvpcConfiguration': {\n",
-    "#             'subnets': [\n",
-    "#                 'string',\n",
-    "#             ],\n",
-    "#             'securityGroups': [\n",
-    "#                 'string',\n",
-    "#             ],\n",
-    "#             'assignPublicIp': 'ENABLED'|'DISABLED'\n",
-    "#         }\n",
-    "#     },\n",
-    "#     overrides={\n",
-    "#         'containerOverrides': [\n",
-    "#             {\n",
-    "#                 'name': 'string',\n",
-    "#                 'command': [\n",
-    "#                     'string',\n",
-    "#                 ],\n",
-    "#                 'environment': [\n",
-    "#                     {\n",
-    "#                         'name': 'string',\n",
-    "#                         'value': 'string'\n",
-    "#                     },\n",
-    "#                 ],\n",
-    "#                 'environmentFiles': [\n",
-    "#                     {\n",
-    "#                         'value': 'string',\n",
-    "#                         'type': 's3'\n",
-    "#                     },\n",
-    "#                 ],\n",
-    "#                 'cpu': 123,\n",
-    "#                 'memory': 123,\n",
-    "#                 'memoryReservation': 123,\n",
-    "#                 'resourceRequirements': [\n",
-    "#                     {\n",
-    "#                         'value': 'string',\n",
-    "#                         'type': 'GPU'|'InferenceAccelerator'\n",
-    "#                     },\n",
-    "#                 ]\n",
-    "#             },\n",
-    "#         ],\n",
-    "#         'cpu': 'string',\n",
-    "#         'inferenceAcceleratorOverrides': [\n",
-    "#             {\n",
-    "#                 'deviceName': 'string',\n",
-    "#                 'deviceType': 'string'\n",
-    "#             },\n",
-    "#         ],\n",
-    "#         'executionRoleArn': 'string',\n",
-    "#         'memory': 'string',\n",
-    "#         'taskRoleArn': 'string',\n",
-    "#         'ephemeralStorage': {\n",
-    "#             'sizeInGiB': 123\n",
-    "#         }\n",
-    "#     },\n",
-    "#     placementConstraints=[\n",
-    "#         {\n",
-    "#             'type': 'distinctInstance'|'memberOf',\n",
-    "#             'expression': 'string'\n",
-    "#         },\n",
-    "#     ],\n",
-    "#     placementStrategy=[\n",
-    "#         {\n",
-    "#             'type': 'random'|'spread'|'binpack',\n",
-    "#             'field': 'string'\n",
-    "#         },\n",
-    "#     ],\n",
-    "#     platformVersion='string',\n",
-    "#     propagateTags='TASK_DEFINITION'|'SERVICE'|'NONE',\n",
-    "#     referenceId='string',\n",
-    "#     startedBy='string',\n",
-    "#     tags=[\n",
-    "#         {\n",
-    "#             'key': 'string',\n",
-    "#             'value': 'string'\n",
-    "#         },\n",
-    "#     ],\n",
-    "#     taskDefinition='string'\n",
-    "# )"
+    "response = client.create_cluster(\n",
+    "    clusterName=clusterName\n",
+    ")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configure Task to be RUN\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task_definition = 'arn:aws:ecs:ap-south-1:682310447536:task-definition/Sani-Login'\n",
+    "desired_tasks = 1\n",
+    "security_groups = ['sg-09aa7c5c7fbf104b4']\n",
+    "subnets = ['subnet-0d74ef94312f84022', 'subnet-01ae0bd56f5fd68af']\n",
+    "\n",
+    "run_task = {\n",
+    "    'enableECSManagedTags': True,\n",
+    "    'taskDefinition': task_definition,\n",
+    "    'platformVersion': 'LATEST',\n",
+    "    'cluster': clusterName,\n",
+    "    'launchType': 'FARGATE',\n",
+    "    'count': desired_tasks,\n",
+    "\n",
+    "    'networkConfiguration': {\n",
+    "        'awsvpcConfiguration': {\n",
+    "            'subnets': subnets,\n",
+    "            'securityGroups': security_groups,\n",
+    "            'assignPublicIp': 'ENABLED'\n",
+    "        }\n",
+    "    },\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RUN the Configured Task\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.run_task(\n",
+    "    cluster=run_task['cluster'],\n",
+    "    count=run_task['count'],\n",
+    "    launchType=run_task['launchType'],\n",
+    "    platformVersion=run_task['platformVersion'],\n",
+    "    taskDefinition=run_task['taskDefinition'],\n",
+    "    networkConfiguration=run_task['networkConfiguration'],\n",
+    "    enableECSManagedTags=run_task['enableECSManagedTags'],\n",
+    ")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get All Running Tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tasks_list = client.list_tasks(\n",
+    "    cluster=clusterName,\n",
+    "    launchType='FARGATE'\n",
+    ")\n",
+    "print(response)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stop all Running Tasks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in tasks_list['taskArns']:\n",
+    "    client.stop_task(\n",
+    "        cluster=clusterName,\n",
+    "        task=i\n",
+    "    )\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete Cluster\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.delete_cluster(\n",
+    "    cluster=clusterName\n",
+    ")\n"
    ]
   }
  ],
