--- a/AWS/create_task_defination.ipynb
+++ b/AWS/create_task_defination.ipynb
@@ -1,14 +1,84 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3 as b3\n",
-    "client = b3.client('ecs')\n",
-    "task_defination_family = 'Sani-Login'"
+    "client = b3.client('ecs')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configure New Task Defination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task_defination_family = 'Sani-Login'\n",
+    "container_name = 'Sani-Login'\n",
+    "protocol = 'tcp'\n",
+    "container_port = 80\n",
+    "app_protocol = 'http'\n",
+    "network_mode = 'awsvpc'\n",
+    "image_uri = '682310447536.dkr.ecr.ap-south-1.amazonaws.com/upes-colab-fe:login-pg'\n",
+    "execution_role_arn = 'arn:aws:iam::682310447536:role/ecsTaskExecutionRole'\n",
+    "port_name = 'sani-port'\n",
+    "\n",
+    "task_definition = {\n",
+    "    'family': task_defination_family,\n",
+    "    'containerDefinitions': [\n",
+    "        {\n",
+    "            'name': container_name,\n",
+    "            'image': image_uri,\n",
+    "            'portMappings': [\n",
+    "                {\n",
+    "                    'containerPort': container_port,\n",
+    "                    'hostPort': container_port,\n",
+    "                    'protocol': protocol,\n",
+    "                    'name': port_name,\n",
+    "                    'appProtocol': app_protocol\n",
+    "                },\n",
+    "            ],\n",
+    "        }\n",
+    "    ],\n",
+    "    'requiresCompatibilities': [\n",
+    "        'FARGATE',\n",
+    "    ],\n",
+    "\n",
+    "    'runtimePlatform': {\n",
+    "        'cpuArchitecture': 'X86_64',\n",
+    "        'operatingSystemFamily': 'LINUX'\n",
+    "    },\n",
+    "\n",
+    "    'cpu': '256',\n",
+    "    'memory': '512'\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create New Task Defination using info provided above"
    ]
   },
   {
@@ -18,176 +88,74 @@
    "outputs": [],
    "source": [
     "response = client.register_task_definition(\n",
-    "    family=task_defination_family,\n",
-    "    taskRoleArn='string',\n",
-    "    executionRoleArn='string',\n",
-    "    networkMode='bridge'|'host'|'awsvpc'|'none',\n",
-    "    containerDefinitions=[\n",
-    "        {\n",
-    "            'name': 'Login-Pg',\n",
-    "            'image': '682310447536.dkr.ecr.ap-south-1.amazonaws.com/upes-colab-fe:login-pg',\n",
-    "            'repositoryCredentials': {\n",
-    "                'credentialsParameter': '682310447536.dkr.ecr.ap-south-1.amazonaws.com/upes-colab-fe'\n",
-    "            },\n",
-    "            'cpu': 0.25,\n",
-    "            'memory': 0.5,\n",
-    "\n",
-    "            'portMappings': [\n",
-    "                {\n",
-    "                    'containerPort': 80,\n",
-    "                    'protocol': 'tcp',\n",
-    "                    'appProtocol': 'http',\n",
-    "                },\n",
-    "            ],\n",
-    "            'essential': True|False,\n",
-    "            'entryPoint': [\n",
-    "                'string',\n",
-    "            ],\n",
-    "            'mountPoints': [\n",
-    "                {\n",
-    "                    'sourceVolume': 'string',\n",
-    "                    'containerPath': 'string',\n",
-    "                    'readOnly': True|False\n",
-    "                },\n",
-    "            ],\n",
-    "            'volumesFrom': [\n",
-    "                {\n",
-    "                    'sourceContainer': 'string',\n",
-    "                    'readOnly': True|False\n",
-    "                },\n",
-    "            ],\n",
-    "            'linuxParameters': {\n",
-    "                'capabilities': {\n",
-    "                    'add': [\n",
-    "                        'string',\n",
-    "                    ],\n",
-    "                    'drop': [\n",
-    "                        'string',\n",
-    "                    ]\n",
-    "                },\n",
-    "                'devices': [\n",
-    "                    {\n",
-    "                        'hostPath': 'string',\n",
-    "                        'containerPath': 'string',\n",
-    "                        'permissions': [\n",
-    "                            'read'|'write'|'mknod',\n",
-    "                        ]\n",
-    "                    },\n",
-    "                ],\n",
-    "                'initProcessEnabled': True|False,\n",
-    "                'sharedMemorySize': 123,\n",
-    "                'tmpfs': [\n",
-    "                    {\n",
-    "                        'containerPath': 'string',\n",
-    "                        'size': 123,\n",
-    "                        'mountOptions': [\n",
-    "                            'string',\n",
-    "                        ]\n",
-    "                    },\n",
-    "                ],\n",
-    "                'maxSwap': 123,\n",
-    "                'swappiness': 123\n",
-    "            },\n",
-    "            'secrets': [\n",
-    "                {\n",
-    "                    'name': 'string',\n",
-    "                    'valueFrom': 'string'\n",
-    "                },\n",
-    "            ],\n",
-    "            'dependsOn': [\n",
-    "                {\n",
-    "                    'containerName': 'string',\n",
-    "                    'condition': 'START'|'COMPLETE'|'SUCCESS'|'HEALTHY'\n",
-    "                },\n",
-    "            ],\n",
-    "            'startTimeout': 123,\n",
-    "            'stopTimeout': 123,\n",
-    "            'hostname': 'string',\n",
-    "            'user': 'string',\n",
-    "            'workingDirectory': 'string',\n",
-    "            'disableNetworking': True|False,\n",
-    "            'privileged': True|False,\n",
-    "            'readonlyRootFilesystem': True|False,\n",
-    "            'dnsServers': [\n",
-    "                'string',\n",
-    "            ],\n",
-    "            'dnsSearchDomains': [\n",
-    "                'string',\n",
-    "            ],\n",
-    "            'extraHosts': [\n",
-    "                {\n",
-    "                    'hostname': 'string',\n",
-    "                    'ipAddress': 'string'\n",
-    "                },\n",
-    "            ],\n",
-    "            'dockerSecurityOptions': [\n",
-    "                'string',\n",
-    "            ],\n",
-    "            'interactive': True|False,\n",
-    "            'pseudoTerminal': True|False,\n",
-    "            'dockerLabels': {\n",
-    "                'string': 'string'\n",
-    "            },\n",
-    "            'ulimits': [\n",
-    "                {\n",
-    "                    'name': 'core'|'cpu'|'data'|'fsize'|'locks'|'memlock'|'msgqueue'|'nice'|'nofile'|'nproc'|'rss'|'rtprio'|'rttime'|'sigpending'|'stack',\n",
-    "                    'softLimit': 123,\n",
-    "                    'hardLimit': 123\n",
-    "                },\n",
-    "            ],\n",
-    "        },\n",
-    "    ],\n",
-    "    placementConstraints=[\n",
-    "        {\n",
-    "            'type': 'memberOf',\n",
-    "            'expression': 'string'\n",
-    "        },\n",
-    "    ],\n",
-    "    requiresCompatibilities=[\n",
-    "        'EC2'|'FARGATE'|'EXTERNAL',\n",
-    "    ],\n",
-    "    cpu='string',\n",
-    "    memory='string',\n",
-    "    tags=[\n",
-    "        {\n",
-    "            'key': 'string',\n",
-    "            'value': 'string'\n",
-    "        },\n",
-    "    ],\n",
-    "    pidMode='host'|'task',\n",
-    "    ipcMode='host'|'task'|'none',\n",
-    "    proxyConfiguration={\n",
-    "        'type': 'APPMESH',\n",
-    "        'containerName': 'string',\n",
-    "        'properties': [\n",
-    "            {\n",
-    "                'name': 'string',\n",
-    "                'value': 'string'\n",
-    "            },\n",
-    "        ]\n",
-    "    },\n",
-    "    inferenceAccelerators=[\n",
-    "        {\n",
-    "            'deviceName': 'string',\n",
-    "            'deviceType': 'string'\n",
-    "        },\n",
-    "    ],\n",
-    "    ephemeralStorage={\n",
-    "        'sizeInGiB': 123\n",
-    "    },\n",
-    "    runtimePlatform={\n",
-    "        'cpuArchitecture': 'X86_64'|'ARM64',\n",
-    "        'operatingSystemFamily': 'WINDOWS_SERVER_2019_FULL'|'WINDOWS_SERVER_2019_CORE'|'WINDOWS_SERVER_2016_FULL'|'WINDOWS_SERVER_2004_CORE'|'WINDOWS_SERVER_2022_CORE'|'WINDOWS_SERVER_2022_FULL'|'WINDOWS_SERVER_20H2_CORE'|'LINUX'\n",
-    "    }\n",
+    "    networkMode=network_mode,\n",
+    "    family=task_definition['family'],\n",
+    "    containerDefinitions=task_definition['containerDefinitions'],\n",
+    "    requiresCompatibilities=task_definition['requiresCompatibilities'],\n",
+    "    runtimePlatform=task_definition['runtimePlatform'],\n",
+    "    cpu=task_definition['cpu'],\n",
+    "    memory=task_definition['memory'],\n",
+    "    executionRoleArn=execution_role_arn\n",
     ")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete Task Defination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = client.describe_task_definition(\n",
+    "    taskDefinition = task_defination_family\n",
+    ")\n",
+    "\n",
+    "result = res['taskDefinition']['revision']\n",
+    "\n",
+    "res = client.deregister_task_definition(\n",
+    "    taskDefinition = (task_defination_family + ':' + str(result))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "fc5703fc2f6ab79c04322b32bfd49f57d11159883e2ac970eba3ef9879861e56"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
