--- a/AWS/create_task_defination.ipynb
+++ b/AWS/create_task_defination.ipynb
@@ -5,17 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import Libraries"
+    "Import Libraries\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3 as b3\n",
-    "client = b3.client('ecs')"
+    "client = b3.client('ecs')\n"
    ]
   },
   {
@@ -23,12 +23,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Configure New Task Defination"
+    "Configure New Task Defination\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "\n",
     "    'cpu': '256',\n",
     "    'memory': '512'\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -78,12 +78,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create New Task Defination using info provided above"
+    "Create New Task Defination using info provided above\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "    cpu=task_definition['cpu'],\n",
     "    memory=task_definition['memory'],\n",
     "    executionRoleArn=execution_role_arn\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -104,32 +104,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Delete Task Defination"
+    "Deregister Task Defination\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# active_task_def = client.list_task_definitions(\n",
+    "#     familyPrefix = task_defination_family,\n",
+    "#     status='ACTIVE'\n",
+    "# )\n",
+    "# active_task_def\n",
+    "# for i in active_task_def:\n",
+    "\n",
     "res = client.describe_task_definition(\n",
-    "    taskDefinition = task_defination_family\n",
+    "    taskDefinition=task_defination_family\n",
     ")\n",
     "\n",
     "result = res['taskDefinition']['revision']\n",
     "\n",
     "res = client.deregister_task_definition(\n",
-    "    taskDefinition = (task_defination_family + ':' + str(result))\n",
-    ")"
+    "    taskDefinition=(task_defination_family + ':' + str(result))\n",
+    ")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete Inactive Task Definations\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inactive_task_def = client.list_task_definitions(\n",
+    "    familyPrefix=task_defination_family,\n",
+    "    status='INACTIVE'\n",
+    ")\n",
+    "inactive_task_def\n",
+    "\n",
+    "res = client.delete_task_definitions(\n",
+    "    taskDefinitions=(inactive_task_def['taskDefinitionArns'])\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
@@ -148,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
