Jenkins pipeline for multiple s3 buckets

--- a/AWS/create_ecs_cluster.ipynb
+++ b/AWS/create_ecs_cluster.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "task_definition = 'arn:aws:ecs:ap-south-1:682310447536:task-definition/Sani-Login'\n",
+    "task_definition = 'arn:aws:ecs:ap-south-1:397102708699:task-definition/Sani-Login'\n",
     "desired_tasks = 1\n",
-    "security_groups = ['sg-09aa7c5c7fbf104b4']\n",
-    "subnets = ['subnet-0d74ef94312f84022', 'subnet-01ae0bd56f5fd68af']\n",
+    "security_groups = ['sg-0625b02a97ff4f521']\n",
+    "subnets = ['subnet-0c7319761c97959df', 'subnet-0efe0735de21708e9', 'subnet-0755af44328619aaf']\n",
     "\n",
     "run_task = {\n",
     "    'enableECSManagedTags': True,\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'tasks': [{'attachments': [{'id': 'f5b8e10a-c325-45ab-ac26-78625d381c6a', 'type': 'ElasticNetworkInterface', 'status': 'PRECREATED', 'details': [{'name': 'subnetId', 'value': 'subnet-0755af44328619aaf'}]}], 'attributes': [{'name': 'ecs.cpu-architecture', 'value': 'x86_64'}], 'availabilityZone': 'ap-south-1a', 'clusterArn': 'arn:aws:ecs:ap-south-1:397102708699:cluster/Sani-Abhay', 'containers': [{'containerArn': 'arn:aws:ecs:ap-south-1:397102708699:container/Sani-Abhay/9bae03352b25484dbc54380f041e2991/ae1d950a-119d-4df2-b6c1-9b7961c143bf', 'taskArn': 'arn:aws:ecs:ap-south-1:397102708699:task/Sani-Abhay/9bae03352b25484dbc54380f041e2991', 'name': 'Sani-Login', 'image': '397102708699.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:login-pg', 'lastStatus': 'PENDING', 'networkInterfaces': [], 'cpu': '0'}], 'cpu': '256', 'createdAt': datetime.datetime(2023, 4, 12, 0, 26, 2, 291000, tzinfo=tzlocal()), 'desiredStatus': 'RUNNING', 'enableExecuteCommand': False, 'group': 'family:Sani-Login', 'lastStatus': 'PROVISIONING', 'launchType': 'FARGATE', 'memory': '512', 'overrides': {'containerOverrides': [{'name': 'Sani-Login'}], 'inferenceAcceleratorOverrides': []}, 'platformVersion': '1.4.0', 'platformFamily': 'Linux', 'tags': [{'key': 'aws:ecs:clusterName', 'value': 'Sani-Abhay'}], 'taskArn': 'arn:aws:ecs:ap-south-1:397102708699:task/Sani-Abhay/9bae03352b25484dbc54380f041e2991', 'taskDefinitionArn': 'arn:aws:ecs:ap-south-1:397102708699:task-definition/Sani-Login:1', 'version': 1, 'ephemeralStorage': {'sizeInGiB': 20}}], 'failures': [], 'ResponseMetadata': {'RequestId': 'cbd7c65d-9e76-40a8-8645-05fe31a857f4', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'cbd7c65d-9e76-40a8-8645-05fe31a857f4', 'content-type': 'application/x-amz-json-1.1', 'content-length': '1415', 'date': 'Tue, 11 Apr 2023 18:56:01 GMT'}, 'RetryAttempts': 0}}\n"
+     ]
+    }
+   ],
    "source": [
     "tasks_list = client.list_tasks(\n",
     "    cluster=clusterName,\n",
@@ -131,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:ecs:ap-south-1:397102708699:task/Sani-Abhay/9bae03352b25484dbc54380f041e2991\n"
+     ]
+    }
+   ],
    "source": [
     "for i in tasks_list['taskArns']:\n",
     "    client.stop_task(\n",
