--- a/AWS/create_task_defination.ipynb
+++ b/AWS/create_task_defination.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
     "container_port = 80\n",
     "app_protocol = 'http'\n",
     "network_mode = 'awsvpc'\n",
-    "image_uri = '682310447536.dkr.ecr.ap-south-1.amazonaws.com/upes-colab-fe:login-pg'\n",
-    "execution_role_arn = 'arn:aws:iam::682310447536:role/ecsTaskExecutionRole'\n",
+    "image_uri = '397102708699.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:login-pg'\n",
+    "execution_role_arn = 'arn:aws:iam::397102708699:role/ecsTaskExecutionRole'\n",
     "port_name = 'sani-port'\n",
     "\n",
     "task_definition = {\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
