--- a/AWS/s3_manupulations.ipynb
+++ b/AWS/s3_manupulations.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bucket Name: signup-sani\n"
+      "Bucket Name: login-sani\n"
      ]
     }
    ],
@@ -139,21 +139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NoSuchKey",
-     "evalue": "An error occurred (NoSuchKey) when calling the PutObjectAcl operation: The specified key does not exist.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNoSuchKey\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m response \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39;49mput_object_acl(\n\u001b[1;32m      2\u001b[0m     ACL\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mpublic-read\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      3\u001b[0m     Bucket\u001b[39m=\u001b[39;49ms3_name,\n\u001b[1;32m      4\u001b[0m     Key\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mindex.html\u001b[39;49m\u001b[39m'\u001b[39;49m\n\u001b[1;32m      5\u001b[0m )\n\u001b[1;32m      6\u001b[0m response\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/botocore/client.py:530\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    526\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[1;32m    527\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpy_operation_name\u001b[39m}\u001b[39;00m\u001b[39m() only accepts keyword arguments.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    528\u001b[0m     )\n\u001b[1;32m    529\u001b[0m \u001b[39m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 530\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_api_call(operation_name, kwargs)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/botocore/client.py:960\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m    958\u001b[0m     error_code \u001b[39m=\u001b[39m parsed_response\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mError\u001b[39m\u001b[39m\"\u001b[39m, {})\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mCode\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    959\u001b[0m     error_class \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexceptions\u001b[39m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m--> 960\u001b[0m     \u001b[39mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m    961\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    962\u001b[0m     \u001b[39mreturn\u001b[39;00m parsed_response\n",
-      "\u001b[0;31mNoSuchKey\u001b[0m: An error occurred (NoSuchKey) when calling the PutObjectAcl operation: The specified key does not exist."
-     ]
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'ZZCBF96BYTJGNRNY',\n",
+       "  'HostId': 'zTOIsrktKOS+/PoHMo6+TKVP8o23DYhdE4cwQVeCeYme6oP1CXrws7grvXa8oWdrSQs28dqc0Co=',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'zTOIsrktKOS+/PoHMo6+TKVP8o23DYhdE4cwQVeCeYme6oP1CXrws7grvXa8oWdrSQs28dqc0Co=',\n",
+       "   'x-amz-request-id': 'ZZCBF96BYTJGNRNY',\n",
+       "   'date': 'Thu, 13 Apr 2023 08:43:34 GMT',\n",
+       "   'server': 'AmazonS3',\n",
+       "   'content-length': '0'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
