Modified AWS Scripts

--- a/AWS/s3_manupulations.ipynb
+++ b/AWS/s3_manupulations.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bucket Name: login-sani\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import boto3 as b3\n",
     "client = b3.client('s3')\n",
@@ -31,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,28 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'ZZCBF96BYTJGNRNY',\n",
-       "  'HostId': 'zTOIsrktKOS+/PoHMo6+TKVP8o23DYhdE4cwQVeCeYme6oP1CXrws7grvXa8oWdrSQs28dqc0Co=',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'zTOIsrktKOS+/PoHMo6+TKVP8o23DYhdE4cwQVeCeYme6oP1CXrws7grvXa8oWdrSQs28dqc0Co=',\n",
-       "   'x-amz-request-id': 'ZZCBF96BYTJGNRNY',\n",
-       "   'date': 'Thu, 13 Apr 2023 08:43:34 GMT',\n",
-       "   'server': 'AmazonS3',\n",
-       "   'content-length': '0'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = client.put_object_acl(\n",
     "    ACL='public-read',\n",
@@ -180,11 +153,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.delete_bucket_cors(Bucket=s3_name, ExpectedBucketOwner=owner)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List Objects in Bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# objects_list = client.list_objects(\n",
+    "#     Bucket=s3_name,\n",
+    "#     ExpectedBucketOwner=owner\n",
+    "# )\n",
+    "# objects_list\n",
+    "\n",
+    "website_configuration = client.get_bucket_website(Bucket=s3_name, ExpectedBucketOwner=owner)\n",
+    "endpoint_url = website_configuration['Endpoint']\n",
+    "print(endpoint_url)\n",
+    "\n",
+    "\n",
+    "# response = client.get_bucket_website(\n",
+    "#     Bucket=s3_name,\n",
+    "#     ExpectedBucketOwner=owner\n",
+    "# )\n",
+    "# print(response)"
    ]
   },
   {
@@ -197,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
