Single-Spa-Pipe

--- a/AWS/s3_manupulations.ipynb
+++ b/AWS/s3_manupulations.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucket Name: abhay-soni-spa\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3 as b3\n",
     "client = b3.client('s3')\n",
