--- a/AWS/create_task_defination.ipynb
+++ b/AWS/create_task_defination.ipynb
@@ -28,17 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "task_defination_family = 'Sani-Login'\n",
-    "container_name = 'Sani-Login'\n",
+    "task_defination_family = 'Back-End'\n",
+    "container_name = 'Back-End'\n",
     "protocol = 'tcp'\n",
-    "container_port = 80\n",
+    "container_port = 3001\n",
     "app_protocol = 'http'\n",
     "network_mode = 'awsvpc'\n",
-    "image_uri = '397102708699.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:login-pg'\n",
+    "image_uri = '397102708699.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:back-end'\n",
     "execution_role_arn = 'arn:aws:iam::397102708699:role/ecsTaskExecutionRole'\n",
     "port_name = 'sani-port'\n",
     "\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
