--- a/AWS/create_ecs_cluster.ipynb
+++ b/AWS/create_ecs_cluster.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,23 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'tasks': [{'attachments': [{'id': '1eeea5d4-9e23-47be-bb4a-71d281f137a9', 'type': 'ElasticNetworkInterface', 'status': 'PRECREATED', 'details': [{'name': 'subnetId', 'value': 'subnet-0efe0735de21708e9'}]}], 'attributes': [{'name': 'ecs.cpu-architecture', 'value': 'x86_64'}], 'availabilityZone': 'ap-south-1b', 'clusterArn': 'arn:aws:ecs:ap-south-1:397102708699:cluster/Sani-Abhay', 'containers': [{'containerArn': 'arn:aws:ecs:ap-south-1:397102708699:container/Sani-Abhay/a612c7b1a99140f6b4d7602c3395a332/4b485c8d-6e50-4650-8c8b-2889060d0fe4', 'taskArn': 'arn:aws:ecs:ap-south-1:397102708699:task/Sani-Abhay/a612c7b1a99140f6b4d7602c3395a332', 'name': 'Back-End', 'image': '397102708699.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:back-end', 'lastStatus': 'PENDING', 'networkInterfaces': [], 'cpu': '0'}], 'cpu': '256', 'createdAt': datetime.datetime(2023, 4, 19, 0, 11, 59, 853000, tzinfo=tzlocal()), 'desiredStatus': 'RUNNING', 'enableExecuteCommand': False, 'group': 'family:Back-End', 'lastStatus': 'PROVISIONING', 'launchType': 'FARGATE', 'memory': '512', 'overrides': {'containerOverrides': [{'name': 'Back-End'}], 'inferenceAcceleratorOverrides': []}, 'platformVersion': '1.4.0', 'platformFamily': 'Linux', 'tags': [{'key': 'aws:ecs:clusterName', 'value': 'Sani-Abhay'}], 'taskArn': 'arn:aws:ecs:ap-south-1:397102708699:task/Sani-Abhay/a612c7b1a99140f6b4d7602c3395a332', 'taskDefinitionArn': 'arn:aws:ecs:ap-south-1:397102708699:task-definition/Back-End:2', 'version': 1, 'ephemeralStorage': {'sizeInGiB': 20}}], 'failures': [], 'ResponseMetadata': {'RequestId': '35cb2aef-b972-4302-9e64-81eae6d80571', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '35cb2aef-b972-4302-9e64-81eae6d80571', 'content-type': 'application/x-amz-json-1.1', 'content-length': '1407', 'date': 'Tue, 18 Apr 2023 18:41:59 GMT'}, 'RetryAttempts': 0}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tasks_list = client.list_tasks(\n",
     "    cluster=clusterName,\n",
     "    launchType='FARGATE'\n",
     ")\n",
-    "print(response)"
+    "print(tasks_list)"
    ]
   },
   {
@@ -139,17 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arn:aws:ecs:ap-south-1:397102708699:task/Sani-Abhay/a612c7b1a99140f6b4d7602c3395a332\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in tasks_list['taskArns']:\n",
     "    client.stop_task(\n",
